Added error handling

--- a/Src/Couchbase.Data.Example/Web.config
+++ b/Src/Couchbase.Data.Example/Web.config
@@ -12,8 +12,8 @@
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
-    <httpRuntime targetFramework="4.5.1" />
-  </system.web>
+    <!-- Allow zombie DOS names to be captured by ASP.NET (/con, /com1, /lpt1, /aux, /prt, /nul, etc) --><httpRuntime targetFramework="4.5.1" relaxedUrlToFileSystemMapping="true" />
+  <!-- Set to 'On' to always show custom errors --><customErrors mode="RemoteOnly" /></system.web>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -30,4 +30,13 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-</configuration>
+<system.webServer>
+		<!-- Catch IIS (e.g. RequestFiltering) 401, 403, 404 and 500 errors and redirect to ErrorController -->
+		<httpErrors errorMode="Custom" defaultResponseMode="ExecuteURL">
+			<clear />
+			<error statusCode="401" responseMode="ExecuteURL" path="/Unauthorized" />
+			<error statusCode="403" responseMode="ExecuteURL" path="/NotFound" />
+			<error statusCode="404" responseMode="ExecuteURL" path="/NotFound" />
+			<error statusCode="500" responseMode="ExecuteURL" path="/InternalServerError" />
+		</httpErrors>
+	</system.webServer></configuration>
