--- a/Src/Couchbase.Data.Example/Couchbase.Data.Example.csproj
+++ b/Src/Couchbase.Data.Example/Couchbase.Data.Example.csproj
@@ -48,6 +48,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>Bin\Couchbase.NetClient.dll</HintPath>
     </Reference>
+    <Reference Include="EasyErrorHandlingMvc">
+      <HintPath>..\packages\EasyErrorHandlingMvc.1.1.2\lib\net40\EasyErrorHandlingMvc.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="Microsoft.Web.Infrastructure">
       <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
@@ -136,12 +139,14 @@
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\npm.js" />
+    <Content Include="Views\ErrorHandling\FatalError.htm" />
     <Content Include="Web.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\ErrorHandlingConfig.cs" />
     <Compile Include="App_Start\NinjectWebCommon.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -163,6 +168,9 @@
     <Content Include="Views\Home\Edit.cshtml" />
     <Content Include="Views\Home\Delete.cshtml" />
     <Content Include="Views\Home\Create.cshtml" />
+    <Content Include="Views\ErrorHandling\Unauthorized.cshtml" />
+    <Content Include="Views\ErrorHandling\NotFound.cshtml" />
+    <Content Include="Views\ErrorHandling\InternalServerError.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -178,6 +186,9 @@
       <Project>{2eda3e96-af7c-4bd7-a929-711a06ff8a43}</Project>
       <Name>Couchbase.Data</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
