--- a/Src/Couchbase.Data.Example/packages.config
+++ b/Src/Couchbase.Data.Example/packages.config
@@ -3,6 +3,7 @@
   <package id="bootstrap" version="3.3.1" targetFramework="net451" />
   <package id="Common.Logging" version="3.0.0" targetFramework="net451" />
   <package id="Common.Logging.Core" version="3.0.0" targetFramework="net451" />
+  <package id="EasyErrorHandlingMvc" version="1.1.2" targetFramework="net451" />
   <package id="jQuery" version="2.1.3" targetFramework="net451" />
   <package id="jQuery.Validation" version="1.13.1" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net451" />
